--- a/ca1_group_k/src/main/resources/views/builder.fxml
+++ b/ca1_group_k/src/main/resources/views/builder.fxml
@@ -1,23 +1,30 @@
-<?xml version="1.0" encoding="UTF-8" ?>
+<?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="624.0" prefWidth="858.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="nci.security_fundamentals.MainController">
    <children>
-      <TabPane id="homeTab" fx:id="mainTabPane" layoutY="1.0" prefHeight="624.0" prefWidth="858.0" tabClosingPolicy="UNAVAILABLE">
+      <TabPane id="homeTab" fx:id="mainTabPane" layoutY="-34.0" prefHeight="658.0" prefWidth="858.0" tabClosingPolicy="UNAVAILABLE">
         <tabs>
-          <Tab id="homeTab" text="Home">
+          <Tab id="homeTab" fx:id="homeTab" text="Home">
                <content>
                   <AnchorPane prefHeight="200.0" prefWidth="200.0" styleClass="pagesPanes">
                      <children>
-                        <AnchorPane prefHeight="595.0" prefWidth="864.0" styleClass="pagesPanesFront">
+                        <AnchorPane layoutY="-29.0" prefHeight="658.0" prefWidth="864.0" styleClass="pagesPanesFront">
                            <children>
-                              <Button id="pwBtn" fx:id="pwBtnFx" onAction="#openPwTab" layoutX="129.0" layoutY="264.0" mnemonicParsing="false" prefHeight="109.0" prefWidth="145.0" styleClass="homeBtns" />
-                              <Button id="imgBtn" fx:id="imageBtnFx" onAction="#openImgTab" layoutX="341.0" layoutY="264.0" mnemonicParsing="false" prefHeight="109.0" prefWidth="145.0" styleClass="homeBtns" />
-                              <Button id="msgBtn" fx:id="msgBtnFx" onAction="#openMsgTab" layoutX="546.0" layoutY="264.0" mnemonicParsing="false" prefHeight="109.0" prefWidth="145.0" styleClass="homeBtns" />
+                              <Button id="pwBtn" fx:id="pwBtnFx" layoutX="89.0" layoutY="249.0" mnemonicParsing="false" onAction="#openPwTab" prefHeight="180.0" prefWidth="180.0" styleClass="homeBtns" />
+                              <Button id="imgBtn" fx:id="imageBtnFx" layoutX="342.0" layoutY="249.0" mnemonicParsing="false" onAction="#openImgTab" prefHeight="180.0" prefWidth="180.0" styleClass="homeBtns" />
+                              <Button id="msgBtn" fx:id="msgBtnFx" layoutX="575.0" layoutY="249.0" mnemonicParsing="false" onAction="#openMsgTab" prefHeight="180.0" prefWidth="180.0" styleClass="homeBtns" />
+                              <Label layoutX="170.0" layoutY="114.0" prefHeight="83.0" prefWidth="515.0" text=" Group K SAF">
+                                 <font>
+                                    <Font name="Verdana Bold" size="59.0" />
+                                 </font>
+                              </Label>
                            </children>
                         </AnchorPane>
                      </children></AnchorPane>
@@ -27,7 +34,10 @@
                <content>
                   <AnchorPane prefHeight="200.0" prefWidth="200.0" styleClass="pagesPanes">
                      <children>
-                        <AnchorPane prefHeight="597.0" prefWidth="873.0" styleClass="pagesPanesFront" />
+                        <AnchorPane prefHeight="633.0" prefWidth="873.0" styleClass="pagesPanesFront">
+                           <children>
+                              <Button layoutX="30.0" layoutY="30.0" mnemonicParsing="false" onAction="#openHomeTab" prefHeight="35.0" prefWidth="70.0" text="EXIT" />
+                           </children></AnchorPane>
                      </children></AnchorPane>
                </content>
             </Tab>
@@ -35,7 +45,10 @@
                <content>
                   <AnchorPane prefHeight="245.0" prefWidth="252.0" styleClass="pagesPanes">
                      <children>
-                        <AnchorPane prefHeight="597.0" prefWidth="866.0" styleClass="pagesPanesFront" />
+                        <AnchorPane prefHeight="633.0" prefWidth="866.0" styleClass="pagesPanesFront">
+                           <children>
+                              <Button layoutX="30.0" layoutY="30.0" mnemonicParsing="false" onAction="#openHomeTab" prefHeight="35.0" prefWidth="70.0" text="EXIT" />
+                           </children></AnchorPane>
                      </children></AnchorPane>
                </content>
             </Tab>
@@ -43,7 +56,8 @@
                <content>
                   <AnchorPane prefHeight="245.0" prefWidth="252.0" styleClass="pagesPanes">
                      <children>
-                        <AnchorPane prefHeight="607.0" prefWidth="858.0" styleClass="pagesPanesFront" />
+                        <AnchorPane prefHeight="633.0" prefWidth="858.0" styleClass="pagesPanesFront" />
+                        <Button fx:id="homeBtn" layoutX="30.0" layoutY="30.0" mnemonicParsing="false" onAction="#openHomeTab" prefHeight="35.0" prefWidth="70.0" text="EXIT" />
                      </children></AnchorPane>
                </content>
             </Tab>
